--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask
-pandas
-matplotlib
-openpyxl
+Flask~=2.3.2
+pandas~=2.0.3
+matplotlib~=3.7.2
+openpyxl~=3.1.2
 numpy
 waitress
 gunicorn
+wtforms
