--- a/test/monitoring_data/config.cfg
+++ b/test/monitoring_data/config.cfg
@@ -1,18 +1,12 @@
 [dashboard]
 APP_VERSION=1.0
-CUSTOM_LINK=dashboard
-MONITOR_LEVEL=3
-OUTLIER_DETECTION_CONSTANT=2.5
-SAMPLING_PERIOD=20
+CUSTOM_LINK=monitor
 ENABLE_LOGGING=True
 
 [authentication]
 USERNAME=PietroUngar
 PASSWORD=admin
-
-[database]
-TABLE_PREFIX=fmd
-DATABASE=sqlite:dashboard.db
+SECURITY_TOKEN=cc83733cb0af8b994ff6577086b87909
 
 [visualization]
 TIMEZONE=Europe/Amsterdam
